--- a/PhoneApp/app/src/main/AndroidManifest.xml
+++ b/PhoneApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".GarminDataSourceService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
