--- a/PhoneApp/app/src/main/AndroidManifest.xml
+++ b/PhoneApp/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <service
             android:name=".GarminDataSourceService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
     </application>
 
 </manifest>
