Changed manifest to specify ConnectIQ 1.x to see if we can get it working on a Forerunner 235

--- a/WatchApp/mb_runner.cfg
+++ b/WatchApp/mb_runner.cfg
@@ -28,3 +28,4 @@ TARGET_DEVICE="vivoactive_hr"
 #TARGET_SDK_VERSION="1.4.0"
 TARGET_SDK_VERSION="2.3.4"
 #TARGET_SDK_VERSION="2.2.0"
+#TARGET_SDK_VERSION="3.0.7"
