--- a/WatchApp/mb_runner.cfg
+++ b/WatchApp/mb_runner.cfg
@@ -1,8 +1,8 @@
 APP_NAME="GarminSD"
 
-TARGET_DEVICE="vivoactive_hr"
+TARGET_DEVICE="venusq"
 #TARGET_DEVICE="vivoactive3"
 
 TARGET_SDK_VERSION="2.4.0"
 #TARGET_SDK_VERSION="3.0.0"
-#TARGET_SDK_VERSION="3.1.0"
+TARGET_SDK_VERSION="3.2.0"
