--- a/WatchApp/mb_runner.cfg
+++ b/WatchApp/mb_runner.cfg
@@ -3,6 +3,6 @@ APP_NAME="GarminSD"
 TARGET_DEVICE="venusq"
 #TARGET_DEVICE="vivoactive3"
 
-TARGET_SDK_VERSION="2.4.0"
+#TARGET_SDK_VERSION="2.4.0"
 #TARGET_SDK_VERSION="3.0.0"
 TARGET_SDK_VERSION="3.2.0"
