Restored compatibility with Vivoactive HR.  Fixed crash on VenuSQ if multiple alarms/warnings received in rapid succession

--- a/WatchApp/mb_runner.cfg
+++ b/WatchApp/mb_runner.cfg
@@ -1,8 +1,9 @@
 APP_NAME="GarminSD"
 
-TARGET_DEVICE="venusq"
+#TARGET_DEVICE="venusq"
+TARGET_DEVICE="vivoactive_hr"
 #TARGET_DEVICE="vivoactive3"
 
-#TARGET_SDK_VERSION="2.4.0"
+TARGET_SDK_VERSION="2.4.0"
 #TARGET_SDK_VERSION="3.0.0"
-TARGET_SDK_VERSION="3.2.0"
+#TARGET_SDK_VERSION="3.2.0"
